# metapp

./: .gitignore  .travis.yml  CMakeLists.txt  DEPS  README.md
include/avakar/: meta.h
src/: meta_impl.h
test/: test_meta.cpp
